Upgrade to 3.28667.0+d3da5d8d9ee8

--- a/values.yml
+++ b/values.yml
@@ -57,3 +57,7 @@ Master:
     -XX:ErrorFile=/var/jenkins_home/logs/hs_err_%p.log
     -XX:+LogVMOutput
     -XX:LogFile=/var/jenkins_home/logs/jvm.log
+Agents:
+  Enabled: true
+  SeparateNamespace:
+    Enabled: false
